<resources>
    <string name="app_name">MyWhatsapp</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="alreadyhaveaccount">Already Have An Account?</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="username">User Name</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="clickForSignup">Click For Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>