<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etUserId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chatBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgWhatsapp"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/chatBackground"
            app:srcCompat="@drawable/whatsapp" />


        <EditText
            android:id="@+id/etEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/txtClickSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:gravity="right"

            android:text="@string/clickForSignup"
            android:textSize="23sp" />



        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:padding="15dp"
            android:text="@string/signin"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/google"
                android:padding="15dp"
                android:text="@string/google"

                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnFacebbok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/facebook"
                android:drawableLeft="@drawable/facebook"
                android:padding="15dp"
                android:text="@string/facebook" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>